{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 213,
  "lineage": "780e04f5-7f25-480a-e255-50c9782e67c6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-027ef2aa28e2ece90",
            "domain": "vpc",
            "id": "eipalloc-0a5728018bc95f751",
            "network_interface": "eni-09805ed1d9b83a3f1",
            "private_dns": "ip-192-168-0-46.ec2.internal",
            "private_ip": "192.168.0.46",
            "public_dns": "ec2-34-199-235-112.compute-1.amazonaws.com",
            "public_ip": "34.199.235.112",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tf-ec2",
      "provider": "provider.aws",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04763b3055de4860b",
            "arn": "arn:aws:ec2:us-east-1:200901485389:instance/i-0d97a9ed2b2056ad5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0d97a9ed2b2056ad5",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "RCS-POC",
            "monitoring": false,
            "primary_network_interface_id": "eni-09cefbfe23a363679",
            "private_dns": "ip-192-168-0-29.ec2.internal",
            "private_ip": "192.168.0.29",
            "public_dns": "ec2-34-238-191-110.compute-1.amazonaws.com",
            "public_ip": "34.238.191.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-076e2127da15ca638",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0757c0e424e50e755",
            "tags": {
              "Name": "TF-EC2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00bac600c7608e77f"
            ]
          },
          "dependencies": [
            "aws_security_group.mysg",
            "aws_subnet.Suri-TF-pubsub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-03e0b529c7c5358c2",
            "owner_id": "200901485389",
            "tags": {
              "Name": "TF-IGW"
            },
            "vpc_id": "vpc-0f747f34cd8663385"
          },
          "dependencies": [
            "aws_vpc.TF-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "tf-natgw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a5728018bc95f751",
            "id": "nat-09e70277625e58e9c",
            "network_interface_id": "eni-09805ed1d9b83a3f1",
            "private_ip": "192.168.0.46",
            "public_ip": "34.199.235.112",
            "subnet_id": "subnet-0757c0e424e50e755",
            "tags": {
              "Name": "TF-NATGW"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.Suri-TF-pubsub",
            "aws_vpc.TF-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pubrt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b14ced7bff2ce0cf",
            "owner_id": "200901485389",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03e0b529c7c5358c2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TF-Pub-RT"
            },
            "vpc_id": "vpc-0f747f34cd8663385"
          },
          "dependencies": [
            "aws_internet_gateway.tf-igw",
            "aws_vpc.TF-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pvtrt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06f379f9748a2900f",
            "owner_id": "200901485389",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "TF-Pvt-RT"
            },
            "vpc_id": "vpc-0f747f34cd8663385"
          },
          "dependencies": [
            "aws_vpc.TF-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubsunetass",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08006410194eb2c84",
            "route_table_id": "rtb-0b14ced7bff2ce0cf",
            "subnet_id": "subnet-0757c0e424e50e755"
          },
          "dependencies": [
            "aws_internet_gateway.tf-igw",
            "aws_route_table.pubrt",
            "aws_subnet.Suri-TF-pubsub",
            "aws_vpc.TF-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvtsunetass",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a41552c4a9f6a837",
            "route_table_id": "rtb-06f379f9748a2900f",
            "subnet_id": "subnet-0821204febd3fa068"
          },
          "dependencies": [
            "aws_route_table.pvtrt",
            "aws_subnet.Suri-TF-pvtsub",
            "aws_vpc.TF-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:200901485389:security-group/sg-00bac600c7608e77f",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00bac600c7608e77f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "mysg",
            "name_prefix": null,
            "owner_id": "200901485389",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0f747f34cd8663385"
          },
          "dependencies": [
            "aws_vpc.TF-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Suri-TF-pubsub",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:200901485389:subnet/subnet-0757c0e424e50e755",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-0757c0e424e50e755",
            "map_public_ip_on_launch": false,
            "owner_id": "200901485389",
            "tags": {
              "Name": "Suri-TF-PubSub1"
            },
            "vpc_id": "vpc-0f747f34cd8663385"
          },
          "dependencies": [
            "aws_vpc.TF-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Suri-TF-pvtsub",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:200901485389:subnet/subnet-0821204febd3fa068",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0821204febd3fa068",
            "map_public_ip_on_launch": false,
            "owner_id": "200901485389",
            "tags": {
              "Name": "Suri-TF-PvtSub2"
            },
            "vpc_id": "vpc-0f747f34cd8663385"
          },
          "dependencies": [
            "aws_vpc.TF-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "TF-VPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:200901485389:vpc/vpc-0f747f34cd8663385",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-01071679a46836970",
            "default_route_table_id": "rtb-0d5f2aecb2326b5f7",
            "default_security_group_id": "sg-0659434a2f06aac19",
            "dhcp_options_id": "dopt-e134d89b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f747f34cd8663385",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d5f2aecb2326b5f7",
            "owner_id": "200901485389",
            "tags": {
              "Name": "TF-VPC"
            }
          }
        }
      ]
    }
  ]
}